// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UriResolver get background 1`] = `
Object {
  "@type": "ImageObject",
  "author": Object {
    "@id": "/data/john smith.yml",
  },
  "contentSize": "399 kB",
  "contentUrl": "/data/images/image2.jpg",
  "encodingFormat": "image/jpeg",
  "height": 853,
  "name": "My background",
  "url": "https://example.com/data/images/image2.jpg",
  "width": 1280,
}
`;

exports[`UriResolver get blog1 1`] = `
Object {
  "@type": "BlogPosting",
  "author": Object {
    "@id": "/data/john smith.yml",
  },
  "dateCreated": 2019-10-26T00:00:00.000Z,
  "dateModified": 2019-10-26T00:00:00.000Z,
  "encodingFormat": "text/markdown",
  "headline": "My first blog",
  "image": Object {
    "@id": "https://dummyimage.com/300",
  },
  "keywords": Array [
    "rxjs",
    "java script",
  ],
  "position": 1,
  "text": "

Hello world",
}
`;

exports[`UriResolver get collections/tags 1`] = `
Array [
  Object {
    "@type": "BlogPosting",
    "author": Object {
      "@type": "Person",
      "email": "smitty123@hotmail.com",
      "familyName": "Smith",
      "givenName": "John",
      "name": "John Smith",
    },
    "dateCreated": 2019-10-26T00:00:00.000Z,
    "dateModified": 2019-10-26T00:00:00.000Z,
    "encodingFormat": "text/markdown",
    "headline": "My first blog",
    "image": Object {
      "@type": "ImageObject",
      "contentSize": "1 kB",
      "contentUrl": "https://dummyimage.com/300",
      "encodingFormat": "image/png",
      "height": 300,
      "url": "https://dummyimage.com/300",
      "width": 300,
    },
    "keywords": Array [
      "rxjs",
      "java script",
    ],
    "position": 1,
    "text": "

Hello world",
    "url": "/blogs/blog1",
  },
  Object {
    "@type": "BlogPosting",
    "author": Object {
      "@type": "Person",
      "email": "smitty123@hotmail.com",
      "familyName": "Smith",
      "givenName": "John",
      "name": "John Smith",
    },
    "dateCreated": 2017-10-26T00:00:00.000Z,
    "dateModified": 2017-10-26T00:00:00.000Z,
    "encodingFormat": "text/markdown",
    "headline": "My second blog",
    "image": Object {
      "@type": "ImageObject",
      "contentSize": "52 kB",
      "contentUrl": "/data/images/image2.webp",
      "encodingFormat": "image/webp",
      "height": 333,
      "thumbnail": Array [
        Object {
          "@type": "ImageObject",
          "contentSize": "2 kB",
          "contentUrl": "/data/images/image2-100w.webp",
          "encodingFormat": "image/webp",
          "height": 66,
          "url": "https://example.com/data/images/image2-100w.webp",
          "width": 100,
        },
        Object {
          "@type": "ImageObject",
          "contentSize": "746 B",
          "contentUrl": "/data/images/image2-50w.webp",
          "encodingFormat": "image/webp",
          "height": 33,
          "url": "https://example.com/data/images/image2-50w.webp",
          "width": 50,
        },
      ],
      "url": "https://example.com/data/images/image2.webp",
      "width": 500,
    },
    "keywords": Array [
      "sambal",
      "java script",
    ],
    "position": 2,
    "text": "

Hello world2",
    "url": "/blogs/blog2",
  },
]
`;

exports[`UriResolver get image2 1`] = `
Object {
  "@type": "ImageObject",
  "contentSize": "399 kB",
  "contentUrl": "/data/images/image2.jpg",
  "encodingFormat": "image/jpeg",
  "height": 853,
  "url": "https://example.com/data/images/image2.jpg",
  "width": 1280,
}
`;

exports[`UriResolver get image2 yml 1`] = `
Object {
  "@type": "ImageObject",
  "contentSize": "18 kB",
  "contentUrl": "/data/images/image2.webp",
  "encodingFormat": "image/webp",
  "height": 200,
  "representativeOfPage": true,
  "thumbnail": Array [],
  "url": "https://example.com/data/images/image2.webp",
  "width": 300,
}
`;

exports[`UriResolver get johnsmith 1`] = `
Object {
  "@type": "Person",
  "email": "smitty123@hotmail.com",
  "familyName": "Smith",
  "givenName": "John",
  "name": "John Smith",
}
`;

exports[`UriResolver hydrate background 1`] = `
Object {
  "@type": "ImageObject",
  "author": Object {
    "@type": "Person",
    "email": "smitty123@hotmail.com",
    "familyName": "Smith",
    "givenName": "John",
    "name": "John Smith",
  },
  "contentSize": "399 kB",
  "contentUrl": "/data/images/image2.jpg",
  "encodingFormat": "image/jpeg",
  "height": 853,
  "name": "My background",
  "url": "https://example.com/data/images/image2.jpg",
  "width": 1280,
}
`;

exports[`UriResolver hydrate blog1 1`] = `
Object {
  "@type": "BlogPosting",
  "author": Object {
    "@type": "Person",
    "email": "smitty123@hotmail.com",
    "familyName": "Smith",
    "givenName": "John",
    "name": "John Smith",
  },
  "dateCreated": 2019-10-26T00:00:00.000Z,
  "dateModified": 2019-10-26T00:00:00.000Z,
  "encodingFormat": "text/markdown",
  "headline": "My first blog",
  "image": Object {
    "@type": "ImageObject",
    "contentSize": "1 kB",
    "contentUrl": "https://dummyimage.com/300",
    "encodingFormat": "image/png",
    "height": 300,
    "url": "https://dummyimage.com/300",
    "width": 300,
  },
  "keywords": Array [
    "rxjs",
    "java script",
  ],
  "position": 1,
  "text": "

Hello world",
}
`;

exports[`UriResolver hydrate header 1`] = `
Object {
  "@type": "WPHeader",
  "hasPart": Array [
    Object {
      "@type": "SiteNavigationElement",
      "name": "About",
      "url": "/about",
    },
    Object {
      "@type": "SiteNavigationElement",
      "name": "Docs",
      "url": "/get-started",
    },
    Array [
      Object {
        "@type": "SiteNavigationElement",
        "name": "My first blog",
        "url": "/blogs/blog1",
      },
      Object {
        "@type": "SiteNavigationElement",
        "name": "My second blog",
        "url": "/blogs/blog2",
      },
    ],
  ],
  "headline": "Sambal",
  "potentialAction": Array [
    Object {
      "@type": "DownloadAction",
      "target": "https://github.com/chen4119/sambal",
    },
  ],
}
`;

exports[`UriResolver hydrate johnsmith 1`] = `
Object {
  "@type": "Person",
  "email": "smitty123@hotmail.com",
  "familyName": "Smith",
  "givenName": "John",
  "name": "John Smith",
}
`;
